src/objects/EEC_MVCData__c.object
<CustomObject>
    <fields>
        <fullName>choices__c</fullName>
        <label>choices</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>defaultRequired__c</fullName>
        <defaultValue>true</defaultValue>
        <label>defaultRequired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dependentFields__c</fullName>
        <label>dependentFields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isDependent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isDependent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>key__c</fullName>
        <label>key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>label__c</fullName>
        <label>label</label>
        <length>3200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pageName__c</fullName>
        <label>pageName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recordTypesRequired__c</fullName>
        <label>recordTypesRequired</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sortOrder__c</fullName>
        <label>sortOrder</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>type__c</fullName>
        <label>type</label>
        <picklist>
            <picklistValues>
                <fullName>text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>picklist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>upload</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>textarea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>date</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>uploadName__c</fullName>
        <label>uploadName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>EEC MVCData</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>pageName__c</columns>
        <columns>key__c</columns>
        <columns>sortOrder__c</columns>
        <columns>defaultRequired__c</columns>
        <columns>isDependent__c</columns>
        <columns>dependentFields__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Num</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EEC MVCDatas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>